Change competitors table image sizes and fix alignment

--- a/client/src/app/pages/competitors/competitors.component.css
+++ b/client/src/app/pages/competitors/competitors.component.css
@@ -27,5 +27,5 @@
     width : 100%;
 }
 .mat-cell {
-  padding: 0 8px 0 8px;
+  padding: 0 8px 0 0px;
 }
